src/test/ui/issue-32797.stderr
error: compilation successful
  --> $DIR/issue-32797.rs:24:1
   |
LL | pub fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^^^^^

error: aborting due to previous error

